[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "This is a simple console game package."
authors = ["Daniil-Seleznev <seleznve.d.ole@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Daniil-Seleznev/python-project-49"
classifiers = ["Programming Language :: Python :: 3.12"]
packages = [
 {include = "brain_games"},
]

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.main:main"
brain-even = "brain_games.scripts.games.brain_even:main"
brain-calc = "brain_games.scripts.games.brain_calc:main"
brain-gcd = "brain_games.scripts.games.brain_gcd:main"
brain-progression = "brain_games.scripts.games.brain_progression:main"
brain-prime = "brain_games.scripts.games.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
